<resources>
    <string name="app_name">Deprocrastinator</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="no_deadline">No deadline yet!</string>
    <string name="yes_deadline">First deadline: %s</string>
    <string name="add">Add</string>
    <string name="add_task">Add task</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="color">Color</string>
    <string name="empty_error">The name and description cannot be empty</string>
    <string name="subtasks">Subtasks</string>
    <string name="add_subtask">Add Subtask</string>
    <string name="tasks">Tasks</string>
    <string name="importance">Importance:</string>
    <string name="choose_deadline_type">Choose deadline type:</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string-array name="importances">
        <item>Unimportant</item>
        <item>Somewhat important</item>
        <item>Important</item>
        <item>Very important</item>
        <item>Urgent</item>
    </string-array>
    <string-array name="schedules">
        <item>Fixed deadline</item>
        <item>No deadline</item>
        <item>Schedule</item>
    </string-array>
    <string name="datetime_error">You must fill the dates</string>
    <string name="subtask_error">You must fill all the fields</string>
    <string name="starting_format">Starting: %s</string>
    <string name="finishing_format">Finishing: %s</string>
    <string name="completed">Completed</string>
    <string name="edit_subtask">Edit Subtask</string>
    <string name="delete_task">Delete Task</string>
    <string name="save_subtask">Save subtask</string>
    <string name="delete_subtask">Delete subtask</string>
    <string name="completed_subtasks">Completed Subtasks</string>
    <string name="save">Save</string>
    <string name="edit_task">Edit Task</string>
    <string name="start_more_end_error">You must select a starting time before the finishing time</string>
    <string name="time_in_past_error">You must select dates in the future</string>
    <string name="next_level">Next level:</string>
    <string name="level_format">Level: %d</string>
    <string name="display_name">Please insert your name. It will only be used to display inside the app.</string>
    <string name="apply">Apply</string>
    <string name="progression">Progression</string>
    <string name="set_name">Set name</string>
    <string name="xp_format">Level: %d\nYou are %d xp points away from level up!</string>
    <string name="please_complete">Please complete a subtask to see a graph of your experience progress!</string>
    <string name="reminder_time">Reminder time:</string>
    <string name="notification_error">You must select your notification before the finishing date</string>
    <string name="notification_error2">You must set the reminder in the future</string>
</resources>