<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/delete_task"
        android:id="@+id/delete_task"
        android:icon="@drawable/baseline_delete_24"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>
    <item
        android:title="@string/add_subtask"
        android:id="@+id/nav_add_subtask"
        android:icon="@drawable/baseline_add_24"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"/>
    <item
        android:title="@string/completed_subtasks"
        android:id="@+id/nav_completed_subtasks"
        android:orderInCategory="3"/>
    <item
        android:title="@string/edit_task"
        android:id="@+id/edit_task"
        android:orderInCategory="4"/>
</menu>