<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_task">

    <fragment
        android:id="@+id/nav_task"
        android:name="com.enigmatix.deprocrastinator.ui.task.TaskFragment"
        android:label="@string/tasks"
        tools:layout="@layout/task_fragment" >
        <action
            android:id="@+id/action_nav_home_to_subtaskFragment"
            app:destination="@id/nav_subtask" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_task"
        android:name="com.enigmatix.deprocrastinator.ui.addtask.AddTaskFragment"
        android:label="@string/add_task"
        tools:layout="@layout/add_task_fragment" />
    <fragment
        android:id="@+id/nav_subtask"
        android:name="com.enigmatix.deprocrastinator.ui.subtask.SubtaskFragment"
        android:label="@string/subtasks" >
        <argument
            android:name="taskId"
            app:argType="integer" />
        <action
            android:id="@+id/action_subtaskFragment_to_addSubtaskFragment"
            app:destination="@id/nav_add_subtask" />
        <action
            android:id="@+id/action_nav_subtask_to_editSubtaskFragment"
            app:destination="@id/nav_edit_subtask" />
        <action
            android:id="@+id/action_nav_subtask_to_nav_completed_subtasks"
            app:destination="@id/nav_completed_subtasks" />
        <action
            android:id="@+id/action_nav_subtask_to_nav_edit_task"
            app:destination="@id/nav_edit_task" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_subtask"
        android:name="com.enigmatix.deprocrastinator.ui.addsubtask.AddSubtaskFragment"
        android:label="@string/add_subtask" >
        <argument
            android:name="taskId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/nav_edit_subtask"
        android:name="com.enigmatix.deprocrastinator.ui.editsubtask.EditSubtaskFragment"
        android:label="@string/edit_subtask" >
        <argument
            android:name="subtaskId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/nav_completed_subtasks"
        android:name="com.enigmatix.deprocrastinator.ui.completedsubtasks.CompletedSubtasksFragment"
        android:label="@string/completed_subtasks" >
        <argument
            android:name="taskId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/nav_edit_task"
        android:name="com.enigmatix.deprocrastinator.ui.edittask.EditTaskFragment"
        android:label="@string/edit_task"
        tools:layout="@layout/edit_task_fragment" >
        <argument
            android:name="taskId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/nav_about_me"
        android:name="com.enigmatix.deprocrastinator.ui.aboutme.AboutMeFragment"
        android:label="@string/progression" />
</navigation>