<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.enigmatix.deprocrastinator.addsubtask.AddSubtaskViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addsubtask.AddSubtaskFragment">


        <EditText
            android:id="@+id/descriptionEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/importanceEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/importance"
            android:textIsSelectable="false"
            android:inputType="none"
            android:focusable="false"
            app:layout_constraintStart_toStartOf="@+id/descriptionEdit"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEdit"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/deadlineChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/importanceEdit"
            app:layout_constraintStart_toStartOf="@+id/importanceEdit"
            android:ems="10"
            android:textIsSelectable="false"
            android:inputType="none"
            android:focusable="false"
            android:importantForAutofill="no"
            android:hint="@string/choose_deadline_type" />

        <EditText
            android:id="@+id/startEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/start_time"
            android:textIsSelectable="false"
            android:inputType="none"
            android:focusable="false"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/deadlineChoose"
            app:layout_constraintTop_toBottomOf="@+id/deadlineChoose"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/endEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/end_time"
            android:textIsSelectable="false"
            android:inputType="none"
            android:focusable="false"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/startEdit"
            app:layout_constraintTop_toBottomOf="@+id/startEdit"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/colorEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusable="false"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="none"
            android:text="@string/color"
            android:textAllCaps="true"
            android:textColor="@color/darker_yellow"
            android:textIsSelectable="false"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/descriptionEdit"
            app:layout_constraintStart_toStartOf="@+id/descriptionEdit"
            app:layout_constraintTop_toBottomOf="@+id/endEdit"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>